--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link white" href="#" id="concepts">Conceptos</a>
+                            <a class="nav-link white" href="index.html" id="concepts">Conceptos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link white" href="#" id="about">Acerca de</a>
@@ -55,7 +55,6 @@
                                 <li><a class="dropdown-item" href="#" id="entertainment">Entretenimiento</a></li>
                                 <li><a class="dropdown-item" href="#" id="law_enforcement">Cuerpos de seguridad</a></li>
                                 <li><a class="dropdown-item" href="#" id="life_of_crime">Criminal</a></li>
-
                             </ul>
                         </li>
                     </ul>
