--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary" id="nav">
             <div class="container-fluid">
                 <a href="index.html"><img id="logo" src="img/the_sims_logo.png"></a>
-
                 <a class="navbar-brand white" href="index.html">Clasificador de Trabajos</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
@@ -28,10 +27,10 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link white" href="index.html" id="concepts">Conceptos</a>
+                            <button class="sims_btn"><a href="index.html" id="concepts"><span>Conceptos</span></a></button>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link white" href="#" id="about">Acerca de</a>
+                            <button class="sims_btn"><a href="#" id="about"><span>Acerca de</span></a></button>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle white" href="#" role="button" data-bs-toggle="dropdown"
