--- a/index.html
+++ b/index.html
@@ -47,13 +47,37 @@
 
                             <a class="nav-link dropdown-toggle white" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
-                                Trabajos
+                                Juego Base
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="#" id="business">Negocios</a></li>
                                 <li><a class="dropdown-item" href="#" id="entertainment">Entretenimiento</a></li>
                                 <li><a class="dropdown-item" href="#" id="law_enforcement">Cuerpos de seguridad</a></li>
                                 <li><a class="dropdown-item" href="#" id="life_of_crime">Criminal</a></li>
+                                <li><a class="dropdown-item" href="#" id="medicine">Medicina</a></li>
+
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+
+                            <a class="nav-link dropdown-toggle white" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Más vivos que nunca
+                            </a>
+                            <ul class="dropdown-menu">
+                                
+
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+
+                            <a class="nav-link dropdown-toggle white" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Animales a raudales
+                            </a>
+                            <ul class="dropdown-menu">
+                                
+
                             </ul>
                         </li>
                     </ul>
@@ -62,14 +86,11 @@
         </nav>
     </header>
     <br><br>
-    <div
-        class="list-group-item container text-center col-lg-5 col-md-10 col-sm-12 p-2 mt-5 sims_div">
-        <h1 id="title"></h1>
-    </div>
+    <div id="title"class="list-group-item container col-lg-5 col-md-10 col-sm-12 p-2 mt-5 sims_div center d-flex"></div>
     <br><div id="subtitle"></div>
     <div class="col-lg-10 col-md-12 col-sm-12 row offset-lg-1 offset-md-0 offset-sm-0">
         <div class="col-lg-2 col-md-12 col-sm-12">
-            <div class="nav nav-pills me-3 col-lg-12 col-md-12 col-sm-12" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+            <div class="nav nav-pills me-3 col-lg-12 col-md-12 col-sm-12 row" id="v-pills-tab" role="tablist" aria-orientation="vertical">
 
             </div>
         </div>
