--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                                 <li><a class="dropdown-item" href="#" id="law_enforcement">Cuerpos de seguridad</a></li>
                                 <li><a class="dropdown-item" href="#" id="life_of_crime">Criminal</a></li>
                                 <li><a class="dropdown-item" href="#" id="medicine">Medicina</a></li>
+                                <li><a class="dropdown-item" href="#" id="military">Ejército</a></li>
 
                             </ul>
                         </li>
@@ -135,6 +136,7 @@
                             <li><a class="dropdown-item" href="#" id="oc_law_enforcement">Cuerpos de seguridad</a></li>
                             <li><a class="dropdown-item" href="#" id="oc_life_of_crime">Criminal</a></li>
                             <li><a class="dropdown-item" href="#" id="oc_medicine">Medicina</a></li>
+                            <li><a class="dropdown-item" href="#" id="oc_military">Ejército</a></li>
 
                         </ul>
                     </li>
