--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="#" id="salary">Salario</a></li>
+                                <li><a class="dropdown-item" href="#" id="salary_hour">Salario por hora</a></li>
                                 <li><a class="dropdown-item" href="#" id="friends">Amigos</a></li>
                                 <li><a class="dropdown-item" href="#" id="skills">Habilidades</a></li>
                             </ul>
@@ -56,6 +57,7 @@
                                 <li><a class="dropdown-item" href="#" id="life_of_crime">Criminal</a></li>
                                 <li><a class="dropdown-item" href="#" id="medicine">Medicina</a></li>
                                 <li><a class="dropdown-item" href="#" id="military">Ejército</a></li>
+                                <li><a class="dropdown-item" href="#" id="politics">Política</a></li>
 
                             </ul>
                         </li>
@@ -137,6 +139,7 @@
                             <li><a class="dropdown-item" href="#" id="oc_life_of_crime">Criminal</a></li>
                             <li><a class="dropdown-item" href="#" id="oc_medicine">Medicina</a></li>
                             <li><a class="dropdown-item" href="#" id="oc_military">Ejército</a></li>
+                            <li><a class="dropdown-item" href="#" id="oc_politics">Política</a></li>
 
                         </ul>
                     </li>
