--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Clasificador de trabajos Sims 1</title>
     <meta charset="UTF-8">
+    <link rel="icon" href="img/icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -58,7 +59,7 @@
                                 <li><a class="dropdown-item" href="#" id="medicine">Medicina</a></li>
                                 <li><a class="dropdown-item" href="#" id="military">Ejército</a></li>
                                 <li><a class="dropdown-item" href="#" id="politics">Política</a></li>
-
+                                <li><a class="dropdown-item" href="#" id="pro_athlete">Atleta Profesional</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -140,6 +141,7 @@
                             <li><a class="dropdown-item" href="#" id="oc_medicine">Medicina</a></li>
                             <li><a class="dropdown-item" href="#" id="oc_military">Ejército</a></li>
                             <li><a class="dropdown-item" href="#" id="oc_politics">Política</a></li>
+                            <li><a class="dropdown-item" href="#" id="oc_pro_athlete">Atleta Profesional</a></li>
 
                         </ul>
                     </li>
