--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <title>Clasificador de trabajos Sims 1</title>
     <meta charset="UTF-8">
-    <link rel="icon" href="img/icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -60,6 +59,8 @@
                                 <li><a class="dropdown-item" href="#" id="military">Ejército</a></li>
                                 <li><a class="dropdown-item" href="#" id="politics">Política</a></li>
                                 <li><a class="dropdown-item" href="#" id="pro_athlete">Atleta Profesional</a></li>
+                                <li><a class="dropdown-item" href="#" id="science">Ciencia</a></li>
+                                <li><a class="dropdown-item" href="#" id="x-treme_career">Alto riesgo</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -69,7 +70,7 @@
                                 Más vivos que nunca
                             </a>
                             <ul class="dropdown-menu">
-
+                                <li><a class="dropdown-item" href="#" id="musician">Músico</a></li>
 
                             </ul>
                         </li>
@@ -142,6 +143,8 @@
                             <li><a class="dropdown-item" href="#" id="oc_military">Ejército</a></li>
                             <li><a class="dropdown-item" href="#" id="oc_politics">Política</a></li>
                             <li><a class="dropdown-item" href="#" id="oc_pro_athlete">Atleta Profesional</a></li>
+                            <li><a class="dropdown-item" href="#" id="oc_science">Ciencia</a></li>
+                            <li><a class="dropdown-item" href="#" id="oc_x-treme_career">Alto riesgo</a></li>
 
                         </ul>
                     </li>
@@ -152,7 +155,7 @@
                             Más vivos que nunca
                         </a>
                         <ul class="dropdown-menu">
-
+                            <li><a class="dropdown-item" href="#" id="oc_musician">Músico</a></li>
 
                         </ul>
                     </li>
