--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="#" id="musician">Músico</a></li>
+                                <li><a class="dropdown-item" href="#" id="slacker">Vagancia</a></li>
 
                             </ul>
                         </li>
@@ -93,13 +94,13 @@
         </nav>
     </header>
     <br><br>
-    <main>
-        <div class="offcanvas offcanvas-start sims_div" data-bs-scroll="true" tabindex="-1"
+    <main class="col-12">
+        <div class="offcanvas offcanvas-start sims_div canvaSize" data-bs-scroll="true" tabindex="-1"
             id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
             <div class="offcanvas-header">
-                <h2 class="offcanvas-title" id="offcanvasWithBothOptionsLabel"><a class="navbar-brand white"
-                        href="index.html">Clasificador de Trabajos</a></h2>
-                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel"><a class="navbar-brand white"
+                        href="index.html">Clasificador de Trabajos</a></h5>
+                <button type="button" class="btn-close white m-2" data-bs-dismiss="offcanvas" aria-label="Close">X</button>
             </div>
             <div class="offcanvas-body">
 
@@ -117,13 +118,13 @@
                             aria-expanded="false">
                             Organizar por...
                         </a>
-                        <ul class="dropdown-menu sims_div p-4">
+                        <ul class="dropdown-menu p-4">
                             <li>
-                                <button class="sims_btn"><a class="dropdown-item" href="#"
+                                <button><a class="dropdown-item" href="#"
                                         id="oc_salary">Salario</a></button>
                             </li>
                             <br>
-                            <li><button class="sims_btn"><a class="dropdown-item" href="#"
+                            <li><button><a class="dropdown-item" href="#"
                                         id="oc_friends">Amigos</a></button></li>
                             <!--
                              <br>
@@ -159,6 +160,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="#" id="oc_musician">Músico</a></li>
+                            <li><a class="dropdown-item" href="#" id="oc_slacker">Vagancia</a></li>
 
                         </ul>
                     </li>
