--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="#" id="musician">Músico</a></li>
                                 <li><a class="dropdown-item" href="#" id="slacker">Vagancia</a></li>
-
+                                <li><a class="dropdown-item" href="#" id="paranormal">Paranormal</a></li>
+                                <li><a class="dropdown-item" href="#" id="journalism">Periodismo</a></li>
+                                <li><a class="dropdown-item" href="#" id="hacker">Hacker</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -84,8 +86,11 @@
                                 Animales a raudales
                             </a>
                             <ul class="dropdown-menu">
-
-
+                                <li><a class="dropdown-item" href="#" id="fashion">Moda</a></li>
+                                <li><a class="dropdown-item" href="#" id="education">Educación</a></li>
+                                <li><a class="dropdown-item" href="#" id="animal_care">Cuidado de animales</a></li>
+                                <li><a class="dropdown-item" href="#" id="culinary">Cocina</a></li>
+                                <li><a class="dropdown-item" href="#" id="circus">Circo</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -161,7 +166,9 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="#" id="oc_musician">Músico</a></li>
                             <li><a class="dropdown-item" href="#" id="oc_slacker">Vagancia</a></li>
-
+                            <li><a class="dropdown-item" href="#" id="oc_paranormal">Paranormal</a></li>
+                            <li><a class="dropdown-item" href="#" id="oc_journalism">Periodismo</a></li>
+                            <li><a class="dropdown-item" href="#" id="oc_hacker">Hacker</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
@@ -171,8 +178,11 @@
                             Animales a raudales
                         </a>
                         <ul class="dropdown-menu">
-
-
+                            <li><a class="dropdown-item" href="#" id="oc_fashion">Moda</a></li>
+                            <li><a class="dropdown-item" href="#" id="oc_education">Educación</a></li>
+                            <li><a class="dropdown-item" href="#" id="oc_animal_care">Cuidado de animales</a></li>
+                            <li><a class="dropdown-item" href="#" id="oc_culinary">Cocina</a></li>
+                            <li><a class="dropdown-item" href="#" id="oc_circus">Circo</a></li>
                         </ul>
                     </li>
                 </ul>
